--- a/P5-WPF/App.config
+++ b/P5-WPF/App.config
@@ -4,6 +4,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
 	<connectionStrings>
-		<add name="myConnectionString" connectionString="Server=localhost; Database = p5temp; User ID=root; " />
+		<add name="myConnectionString" connectionString="Server=127.0.0.1; port=3306; Database=p5temp; User ID=root; PwD=; " />
 	</connectionStrings>
 </configuration>
