--- a/P5-WPF/P5-WPF.csproj
+++ b/P5-WPF/P5-WPF.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -61,6 +62,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Models\BatchesModel.cs" />
+    <Compile Include="Models\BatchIDModel.cs" />
     <Compile Include="SingleBatch_Window.xaml.cs">
       <DependentUpon>SingleBatch_Window.xaml</DependentUpon>
     </Compile>
@@ -68,6 +70,7 @@
     <Compile Include="TestWindow.xaml.cs">
       <DependentUpon>TestWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ViewModels\MainWindowVm.cs" />
     <Compile Include="ViewModels\SingleBatchVm.cs" />
     <Page Include="BatchAdd.xaml">
       <SubType>Designer</SubType>
