db name updated

--- a/P5-WPF/App.config
+++ b/P5-WPF/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
 	<connectionStrings>
-		<add name="myConnectionString" connectionString="Server=127.0.0.1; port=3306; Database=p5temp; User ID=root; PwD=; " />
+		<add name="myConnectionString" connectionString="Server=127.0.0.1; port=3306; Database=novefadb; User ID=root; PwD=; " />
 	</connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
