--- a/P5-WPF/P5-WPF.csproj
+++ b/P5-WPF/P5-WPF.csproj
@@ -90,6 +90,7 @@
     </ApplicationDefinition>
     <Compile Include="Models\BatchesModel.cs" />
     <Compile Include="Models\BatchIDModel.cs" />
+    <Compile Include="Models\BatchModel.cs" />
     <Compile Include="SingleBatch_Window.xaml.cs">
       <DependentUpon>SingleBatch_Window.xaml</DependentUpon>
     </Compile>
@@ -99,6 +100,7 @@
     </Compile>
     <Compile Include="ViewModels\MainWindowVm.cs" />
     <Compile Include="ViewModels\SingleBatchVm.cs" />
+    <Compile Include="ViewModels\WarningBatchVm.cs" />
     <Page Include="BatchAdd.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
