--- a/P5-WPF/P5-WPF.csproj
+++ b/P5-WPF/P5-WPF.csproj
@@ -152,5 +152,6 @@
   <ItemGroup>
     <Resource Include="Images\Novefa_Logo.PNG" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
