--- a/P5-WPF/App.config
+++ b/P5-WPF/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="P5_WPF.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
@@ -18,4 +23,20 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <userSettings>
+    <P5_WPF.Properties.Settings>
+      <setting name="UpperTemp" serializeAs="String">
+        <value>24</value>
+      </setting>
+      <setting name="LowerTemp" serializeAs="String">
+        <value>18</value>
+      </setting>
+      <setting name="UpperHum" serializeAs="String">
+        <value>70</value>
+      </setting>
+      <setting name="LowerHum" serializeAs="String">
+        <value>40</value>
+      </setting>
+    </P5_WPF.Properties.Settings>
+  </userSettings>
 </configuration>
