Main looks very nice yes thank you

--- a/P5-WPF/P5-WPF.csproj
+++ b/P5-WPF/P5-WPF.csproj
@@ -172,5 +172,14 @@
   <ItemGroup>
     <Resource Include="Images\gear.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\archive.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\plant.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\sensor.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
